fix(portfolio-service): use `getLast` for clarity in retrieving the last performance point